--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,15 @@
+@import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard-dynamic-subset.min.css");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  body {
+    @apply bg-background text-foreground;
+    font-family: "Pretendard";
+  }
+}
 
 :root {
   --white: hsl(210 40% 98%);
@@ -19,12 +28,6 @@
 
   --primary: 210 40% 98%;
   --primary-foreground: 222.2 47.4% 11.2%;
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
 }
 
 @layer utilities {
